All_Component_DX/force-app/main/default/objects/SM_Overnight_Stay_Policy__c/SM_Overnight_Stay_Policy__c.object-meta.xml
<CustomObject>
    <label>Overnight Stay Policy</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Overnight Stay Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>