All_Component_DX/force-app/main/default/objects/SM_Overnight_Stay_Policy__c/fields/SM_Active__c.field-meta.xml
<CustomField>
    <fullName>SM_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Detemines whether the overnight stay policy is active</description>
    <inlineHelpText>Detemines whether the overnight stay policy is active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>