All_Component_DX/force-app/main/default/objects/SM_Overnight_Stay_Policy__c/fields/SM_Allow_Thursday_ONS__c.field-meta.xml
<CustomField>
    <fullName>SM_Allow_Thursday_ONS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether an overnight stay is allowed on a Thursday of the business hours</description>
    <inlineHelpText>Determines whether an overnight stay is allowed on a Thursday of the business hours</inlineHelpText>
    <label>Allow Thursday Overnight Stay</label>
    <type>Checkbox</type>
</CustomField>