All_Component_DX/force-app/main/default/objects/SM_Overnight_Stay_Policy__c/fields/SM_Consecutive_ONS_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>SM_Consecutive_ONS_Per_Week__c</fullName>
    <description>Maximum number of consecutive days a technician can stay overnight in a work shift week.</description>
    <inlineHelpText>Maximum number of consecutive days a technician can stay overnight in a work shift week.</inlineHelpText>
    <label>Max Consecutive Overnight Stays</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>