All_Component_DX/force-app/main/default/objects/SM_Overnight_Stay_Policy__c/fields/SM_Drive_Time_Threshold__c.field-meta.xml
<CustomField>
    <fullName>SM_Drive_Time_Threshold__c</fullName>
    <description>Determines the time taken to travel from the last work order location to home location</description>
    <inlineHelpText>Determines the time taken to travel from the last work order location to home location</inlineHelpText>
    <label>Drive Time Threshold (in minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>