All_Component_DX/force-app/main/default/objects/SM_Overnight_Stay_Policy__c/fields/SM_Minimum_Recovery_Days__c.field-meta.xml
<CustomField>
    <fullName>SM_Minimum_Recovery_Days__c</fullName>
    <description>Determines the minimum gap (in days) between two consecutive overnight stays</description>
    <inlineHelpText>Determines the minimum gap (in days) between two consecutive overnight stays</inlineHelpText>
    <label>Min Gap Between Consecutive ONS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>