All_Component_DX/force-app/main/default/objects/SM_Overnight_Stay_Policy__c/fields/SM_Policy_Override__c.field-meta.xml
<CustomField>
    <fullName>SM_Policy_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether the policy can be overridden by efficiency</description>
    <inlineHelpText>Determines whether the policy can be overridden by efficiency</inlineHelpText>
    <label>Policy Override</label>
    <type>Checkbox</type>
</CustomField>