All_Component_DX/force-app/main/default/objects/SM_Overnight_Stay_Policy__c/validationRules/ONS_Validation_LimitMinGapBetnConsONS.validationRule-meta.xml
<ValidationRule>
    <fullName>ONS_Validation_LimitMinGapBetnConsONS</fullName>
    <active>true</active>
    <description>Minimum gap between consecutive overnights should be greater than or equal to 0 and less than or equal to 7.</description>
    <errorConditionFormula>OR(SM_Minimum_Recovery_Days__c &lt; 0 , SM_Minimum_Recovery_Days__c &gt; 7)</errorConditionFormula>
    <errorMessage>Minimum gap between consecutive overnights should be between 0 and 7.</errorMessage>
</ValidationRule>